# prefixctl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
Ctl/: VERSION  config.yaml  requirements.txt
Ctl/dev/: compose.sh  docker-compose.yml  example.env  run.sh
Ctl/docker/: Dockerfile  Dockerfile.tasks  django-uwsgi.ini  entrypoint.sh  manage.sh
docs/: quickstart.md  settings.md
docs/dev/: monitors.md
examples/monitor_example/: apps.py  models.py  monitor.py  serializers.py
examples/monitor_example/migrations/: 0001_initial.py
src/: manage.py
src/django_prefixctl/: __init__.py  admin.py  apps.py  irr.py  signals.py  urls.py  views.py
src/django_prefixctl/migrations/: 0001_initial.py  0002_net_fields.py  0003_auto_20220107_1418.py  0004_auto_20220110_1429.py  0005_auto_20220307_0752.py  0006_reftag_asn_set.py  0007_reftag_prefix_set.py  0008_reftag_prefix.py  0009_reftag_asnmon.py  0010_reftag_alert_log_recipient.py  0011_auto_20230301_1445.py  0012_asnmonitor_task_schedule.py  0013_auto_20240111_1701.py  0014_irrimporttask_alter_asnset_unique_together_and_more.py  0015_irrimporttask.py  0016_alter_asnset_slug_alter_prefixset_slug.py  0017_remove_prefixmonitor_asn_set_origin_and_more.py  0018_cleanup_task.py  0019_alter_prefixset_irr_as_set.py
src/django_prefixctl/models/: __init__.py  prefixctl.py  tasks.py
src/django_prefixctl/rest/: api_schema.py  decorators.py
src/django_prefixctl/templates/: theme-select.html
src/prefix_meta/: admin.py  apps.py  models.py  settings.py  tasks.py  urls.py  util.py  views.py
src/prefix_meta/migrations/: 0001_initial.py  0010_data_type.py  (+15 more)
src/prefixctl/: urls.py  wsgi.py
src/ripestat/: ATTRIBUTION.md  __init__.py  api.py  exceptions.py  ripe_stat.py  validators.py
src/tests/: conftest.py  fixtures.py  test_irr_import.py  test_models.py  test_monitor_api.py  test_prefixctl_api.py  test_ripestat_routing_status.py
(+80 files in other folders)
